--- a/packages/components/src/components/tabs/tabs.scss
+++ b/packages/components/src/components/tabs/tabs.scss
@@ -111,6 +111,8 @@ $pulse-gap-offset: calc(#{variables.$db-border-width-xs} + #{variables.$db-spaci
 		flex-direction: row;
 
 		.db-tab-list {
+			--db-tabs-line-gap-vertical: #{$pulse-gap-offset};
+
 			/*
 			min and nominal size must both be set to ensure
 			- min-inline-size: tab-list is not displayed narrower than defined
